# PocketPlanner

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  TODO.md  bacon.toml  build.sh
.github/workflows/: fly.yml  ghcr.yml
PocketPlanner.Api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  fly.toml
PocketPlanner.Api/src/: lib.rs  main.rs
PocketPlanner.Api/src/api/: assets.rs  mod.rs
PocketPlanner.Api/src/api/auth/: mod.rs
PocketPlanner.Api/src/api/belvo/: mod.rs  token.rs  webhook.rs
PocketPlanner.Api/src/api/calculations/: installments.rs  mod.rs  savings.rs  wage_deduction.rs
PocketPlanner.Api/src/api/user/: mod.rs  transaction.rs
PocketPlanner.Api/src/application/: mod.rs
PocketPlanner.Api/src/application/extractors/: mod.rs  picpay.rs
PocketPlanner.Api/src/application/model/: credit_card.rs  mod.rs  transaction.rs
PocketPlanner.Api/src/application/repositories/: mod.rs  transaction.rs
PocketPlanner.Api/src/extensions/: chrono.rs  log_ext.rs  mod.rs
PocketPlanner.Api/src/views/: mod.rs
PocketPlanner.Api/tests/: nubank_extraction.rs  pdf_extraction.rs  picpay_extraction.rs  savings.rs  test1.rs
PocketPlanner.App/: .gitignore  App.tsx  PocketPlanner.sln  app.json  babel.config.js  colors.ts  extensions.ts  package-lock.json  package.json  polyfills.ts
PocketPlanner.App/PocketPlanner.App/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  PocketPlanner.App.csproj
PocketPlanner.App/Screens/: Authentication.tsx  Summary.tsx
PocketPlanner.App/Screens/Home/: Home.tsx  Summary.tsx
api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  fly.toml  litefs.yml  litestream.yml
api/public/: manifest.json  worker.js
api/src/: main.rs
api/src/api/: Cargo.toml  mod.rs
api/src/api/auth/: mod.rs
api/src/api/calculations/: savings.rs
api/src/api/src/: main.rs
api/src/api/src/api/: mod.rs
api/src/api/src/api/calculations/: installments.rs  mod.rs  savings.rs  wage_deduction.rs
api/src/api/src/api/user/: auth.rs  mod.rs
api/src/api/src/application/: mod.rs
api/src/api/src/application/extractors/: mod.rs
api/src/api/src/application/model/: credit_card.rs
api/src/api/user/: mod.rs  transaction.rs
api/src/app/: Cargo.toml
api/src/app/src/: lib.rs
api/src/application/: mod.rs
api/src/application/extractors/: mod.rs
api/src/application/model/: transaction.rs
api/src/lib/: Cargo.toml
api/src/lib/src/: lib.rs  util.rs
api/src/lib/src/api/: mod.rs
api/src/lib/src/api/card/: mod.rs
api/src/lib/src/api/category/: mod.rs
api/src/lib/src/api/transaction/: mod.rs
api/src/lib/src/fragments/transaction/: mod.rs
api/src/lib/src/infra/: card.rs  category.rs  db.rs  mod.rs  transaction.rs
api/src/lib/templates/: error.html
api/src/lib/templates/transaction/: view.html
app/: .env.development  .env.example  .prettierrc  Cargo.toml  Dockerfile  README.md  fly.toml  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
app/src/: App.svelte  app.css  lib.rs  main.rs  vite-env.d.ts
app/src/lib/: api.ts  types.ts
app/src/lib/components/: Layout.svelte  login-form.svelte
app/src/lib/components/login-01/: +page.svelte
app/src/lib/components/ui/button/: button.svelte
app/src/lib/components/ui/card/: card-action.svelte  card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
app/src/lib/components/ui/input/: input.svelte
app/src/lib/components/ui/label/: label.svelte
app/src/lib/pages/: Cards.svelte  Dashboard.svelte  Landing.svelte  Login.svelte  NotFound.svelte  RedirectToLanding.svelte  Transactions.svelte
app/src/lib/stores/: app.svelte.ts
app/src/views/: mod.rs
app/templates/: index.html
public/: index.html  manifest.json  worker.js
src/api/: Cargo.toml
src/api/src/: main.rs
src/api/src/api/: mod.rs
src/api/src/api/calculations/: installments.rs  wage_deduction.rs
src/api/src/api/fragments/: mod.rs
src/api/src/api/fragments/transaction/: mod.rs
src/api/src/api/user/: auth.rs  mod.rs  transaction.rs
src/api/src/application/: mod.rs
src/api/src/application/model/: mod.rs
src/api/src/application/repositories/: mod.rs
src/api/src/extensions/: chrono.rs
src/app/: Cargo.toml
src/app/src/: lib.rs  router.rs
src/app/src/fragments/transaction/: mod.rs
src/app/src/views/: mod.rs
src/app/templates/: index.html
src/lib/: Cargo.toml
src/lib/src/: lib.rs
src/lib/src/fragments/: mod.rs
src/lib/src/fragments/transaction/: mod.rs
src/lib/src/infra/: mod.rs
src/lib/src/templates/: mod.rs
src/lib/src/templates/transaction/: mod.rs
src/lib/src/views/: mod.rs
src/lib/templates/: content.html  error.html  home.html  index.html
src/lib/templates/transaction/: action.html  view.html
