[package]
name = "pocket_planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
lopdf = { version = "0.31.0", features = ["pom", "pom_parser"] }
reqwest = "0.11.18"
rust_decimal = "1.31.0"
