[package]
name = "pocket_planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
chrono = "0.4.26"
log = "0.4.19"
lopdf = { version = "0.31.0", features = ["pom", "pom_parser"] }
reqwest = "0.11.18"
rust_decimal = "1.31.0"
rust_decimal_macros = "1.32.0"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.30.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
