[package]
name = "pocket_planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum-macros = "0.3.8"
chrono = "0.4.26"
env_logger = "0.10.0"
jsonwebtoken = "9.1.0"
log = "0.4.19"
lopdf = { version = "0.31.0", features = ["pom", "pom_parser"] }
reqwest = { version = "0.11.18", features = ["json"] }
rust_decimal = "1.31.0"
rust_decimal_macros = "1.32.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.49"
tokio = { version = "1.30.0", features = ["full"] }
