[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.96"
askama = { version = "0.12.1" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.77", features = ["Request", "FormData", "console"] }
serde = { version = "1.0.218", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
rusqlite = { git = "https://github.com/Spxg/rusqlite" }
sqlite-wasm-rs = { version = "0.3", default-features = false, features = [
  "precompiled",
] }
lib = { path = "../lib" }
