[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.7.9", default-features = false }
tower = "0.5.2"
http-body-util = "0.1.2"
anyhow = "1.0.96"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.77", features = ["console"] }
serde = { version = "1.0.218", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
sqlite-wasm-rs = { version = "0.3", default-features = false, features = [
  "precompiled",
] }
lib = { path = "../lib" }
