[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", default-features = false, features = ["form"] }
anyhow = "1.0.96"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
serde = { version = "1.0.218", features = ["derive"] }
rusqlite = { git = "https://github.com/Spxg/rusqlite" }
