[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", default-features = false, features = ["form"] }
anyhow = "1.0.96"
askama = { version = "0.12.1" }
askama_web = { version = "0.0.1-pre.0", features = ["axum-0.8"] }
serde = { version = "1.0.218", features = ["derive"] }
rusqlite = { git = "https://github.com/Spxg/rusqlite" }
