[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", default-features = false, features = ["form"] }
anyhow = "1.0.96"
askama = { version = "0.14.0" }
askama_web = { version = "0.14.0", features = ["axum-0.8"] }
serde = { version = "1.0.218", features = ["derive"] }
surrealdb = "2.3.0"
