[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lopdf = { version = "0.36.0" }
reqwest = { version = "0.12.9", features = [
  "json",
  "rustls-tls",
], default-features = false }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
surrealdb = "2.3.0"
dotenvy = "0.15.7"
lib = { path = "../lib" }
