[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }

chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

lopdf = { version = "0.37.0" }

reqwest = { version = "0.12.23", features = [
  "json",
  "rustls-tls",
], default-features = false }

rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

thiserror = "2.0.15"

tokio = { version = "1.47.1", features = ["full"] }

dotenvy = "0.15.7"

lib = { path = "../lib" }
