[package]
name = "api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }

chrono = { version = "0.4.43", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

lopdf = { version = "0.39.0" }

reqwest = { version = "0.13.2", features = ["json"] }
openidconnect = { version = "4.0.1", features = ["reqwest"] }

rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

thiserror = "2.0.18"

tokio = { version = "1.49.0", features = ["full"] }

dotenvy = "0.15.7"

lib = { path = "../lib" }
