[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.8.4", default-features = false }
tower = "0.5.2"
http-body-util = "0.1.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.77", features = ["console", "Response", "ResponseInit"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
surrealdb = { version= "2.3.0", features = ["kv-indxdb"], default-features = false }
getrandom = { version = "0.3.2", features = ["wasm_js"] }
lib = { path = "../lib" }
