[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", default-features = false, features = ["form", "macros", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
surrealdb = { version = "2.3.0", default-features = false }
thiserror = "2.0.12"
serde_json = "1.0.140"
