[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"

axum = { version = "0.8.8", default-features = false, features = ["json"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v7"] }
tokio-rusqlite = "0.7.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
